src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Part_of_Rapid_Response_Team__c</fullName>
        <inlineHelpText>Fill only in this field if you are part of the Rapid Response Team!</inlineHelpText>
        <label>Part of Rapid Response Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YMQ</fullName>
                </value>
                <value>
                    <fullName>GVA</fullName>
                </value>
                <value>
                    <fullName>SIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_App_Role__c</fullName>
        <label>One Id Portal App Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Registration_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For customer portal users created from existing contact records, this field is used to force users to confirm registration information on the customer portal</description>
        <label>Portal Registration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_User_Frozen_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal User Inactive more than 90 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_User_Frozen__c</fullName>
        <formula>Contact.Portal_User_Frozen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal User Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_one__c</fullName>
        <description>used for reports count of records</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of one</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Apex_emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>us eto receive major apex error email from clas devTools</inlineHelpText>
        <label>Receive Apex emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAML_TD_Id__c</fullName>
        <formula>Contact_Unique_Id__c + Contact.IATA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAML TD Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Access_1__c</fullName>
        <label>SAP Account Access 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Access_2__c</fullName>
        <label>SAP Account Access 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Access_3__c</fullName>
        <label>SAP Account Access 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCForeign_UserID__c</fullName>
        <label>SFDCForeign_UserID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIS Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Code__c</fullName>
        <description>Code to be transmmitted to finance, along with Purchase Order informaiton</description>
        <label>Sales Person Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Expertise__c</fullName>
        <label>Segment Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Airport &amp; Civil Aviation</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TD_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TD Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_filter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Not to be displayed in any page layout. for temporary filtering purpose. Is a number field so it can allow multiple filter values in case we need to categorize. 
Currently (26/10/15) used to identify which user haven&apos;t complete the support survey. Feel free to reuse it after 15/11/15. Please update the description.</description>
        <label>Temp filter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToU_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Terms of Use Accepted.</description>
        <inlineHelpText>Terms of Use Accepted:Yes/No.</inlineHelpText>
        <label>ToU_accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgai__active_user_settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active user settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSISUser__c</fullName>
        <formula>if(  
   AND(
      ISPICKVAL(Contact.Type_of_Contact__c, &quot;SIS Super User&quot;),
       Contact.SIS_ID__c  &lt;&gt; &quot;&quot;
   ),
   &quot;true&quot;,
   &quot;false&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isSISUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rpm__c</fullName>
        <label>RPM</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>AI_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>AI</value>
        </filters>
        <label>AI Pilot Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsersTIESS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>IDFS_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>TIESS</value>
        </filters>
        <label>Active Users TIESS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>MARKETING_USER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>License_Cost_Center__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>License_Cost_Center__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>armiento</value>
        </filters>
        <label>User with name</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>License_Cost_Center__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>All Internal Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>IATAAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Company_community</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_name__c</field>
            <operation>equals</operation>
            <value>Salesforce platform</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Company community users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>IS_PORTAL_SELF_REGISTERED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>ISS</value>
        </filters>
        <label>Customer Portal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FuelUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Fuel</value>
        </filters>
        <label>Fuel Users</label>
    </listViews>
    <listViews>
        <fullName>IATASP</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>License_Cost_Center__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Strategic Partnerships</value>
        </filters>
        <label>MACS - Strategic partnerships</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDFSAfrica</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Africa</value>
        </filters>
        <label>IDFS Africa</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAfricaRegionalOffice</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IDFSAsiaPacific</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDFS_Region__c</field>
            <operation>equals</operation>
            <value>Asia &amp; Pacific</value>
        </filters>
        <label>IDFS Asia &amp; Pacific - All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAsiaPacificRegionalOffice</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IDFSAsiaPacificActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>License_Cost_Center__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDFS_Region__c</field>
            <operation>equals</operation>
            <value>Asia &amp; Pacific</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IDFS Asia &amp; Pacific - Active</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSAsiaPacificRegionalOffice</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IDFSAustria_d_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>Austria</value>
        </filters>
        <label>IDFS Austria</label>
        <sharedTo>
            <group>IDFSAustria</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IDFSFrance</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>France</value>
        </filters>
        <label>IDFS France</label>
        <sharedTo>
            <role>IDFSEuropeRegionalOffice</role>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>UserDIvision</fullName>
        <active>true</active>
        <description>Division is mandatory for every user.</description>
        <errorConditionFormula>ISNULL(Division)</errorConditionFormula>
        <errorDisplayField>Division</errorDisplayField>
        <errorMessage>Please enter the Division of the user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_User_License_Cost_Center</fullName>
        <active>true</active>
        <description>User license cost center format validation - first 3 Alphabets (Capitals), next 3 numeric, next 2 Alphabets (Capitals) and last 2 numeric</description>
        <errorConditionFormula>AND(
    ISPICKVAL(UserType, &apos;Standard&apos;),
    IsActive,
    NOT(REGEX(License_Cost_Center__c , &quot;[A-Z]{2}[A-Z0-9]{4}[A-Z]{2}[0-9]{2}&quot;)
        )
    )</errorConditionFormula>
        <errorDisplayField>License_Cost_Center__c</errorDisplayField>
        <errorMessage>The format for cost center is - &lt;2/4 Alphabets(Uppercase)&gt;&lt;2/4 Numeric&gt;&lt;2/4 Alphabets(Uppercase)&gt;&lt;2 Numeric&gt;, with a total of 10 characters. For example, ISF005CH01, XSMW01JO01.</errorMessage>
    </validationRules>
</CustomObject>